[project]
name = "linear-regression"
version = "0.1.0"
description = "A simple web tool for performing linear regression on clean data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
    "streamlit>=1.47.0",
]
